# langchain-learning-notes

./: .gitignore  README.md  pyproject.toml
app/api/v1/: chat.py
jupyter/: pyproject.toml
jupyter/notebooks/第1章-AI通识与基础/: 1.1_OpenAI.ipynb
jupyter/notebooks/第2章-LangChain入门/: 2.1_helloworld.ipynb  2.3_messages.ipynb  2.4_prompt.ipynb  2.5_tools.ipynb  2.7_实战.ipynb
jupyter/notebooks/第2章-LangChain入门/resources/: checkpoint.db  personal_chief.db
marry-ai/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
marry-ai/src/app/: globals.css  layout.tsx
marry-ai/src/components/icons/: wedding-ai.tsx
marry-ai/src/components/thread/: MultimodalPreview.tsx  index.tsx
marry-ai/src/components/thread/history/: index.tsx
marry-ai/src/components/thread/messages/: ai.tsx  human.tsx
marry-ai/src/components/ui/: button.tsx  input.tsx
marry-ai/src/hooks/: use-file-upload.tsx
